<resources>
    <string name="app_name">QQ通知增强</string>
    <string name="service_notif">QQ通知扩展服务</string>
    <string name="service_access">QQ通知隐藏服务</string>
    <string name="activity_share">分享给QQ好友</string>
    <string name="activity_splash">QQ消息扩展</string>
    <string name="acc_desc">（可选）用于在QQ打开时隐藏QQ消息</string>

    <!--设置页-->
    <string name="pref_cate_permit">必要权限</string>
    <string name="pref_notf_permit">通知使用权</string>
    <string name="pref_aces_permit">无障碍服务</string>
    <!--<string name="pref_save_permit">存储权限</string>-->
    <string name="pref_cate_other">杂项</string>
    <string name="pref_cate_style">通知样式</string>
    <string name="pref_use_full_icon">实心QQ图标</string>
    <string name="pref_icon_mode">图标样式</string>
    <string-array name="pref_icon_mode">
        <item>默认</item>
        <item>实心QQ图标</item>
        <item>自定义</item>
    </string-array>
    <string-array name="pref_icon_mode_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_icon_path">图标路径</string>
    <string name="pref_use_default_sound">系统提示音</string>
    <string name="pref_ringtone">提示音</string>
    <string name="pref_priority">通知优先级</string>
    <string-array name="pref_priority">
        <item>最高</item>
        <item>高</item>
        <item>中</item>
        <item>低</item>
        <item>最低</item>
    </string-array>
    <string-array name="pref_priority_value">
        <item>2</item>
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
    </string-array>
    <!--<string name="pref_disable_float">禁用浮动通知</string>-->
    <string name="pref_cate_group">群组消息</string>
    <string name="pref_ignore_group_msg">忽略群消息</string>
    <string name="pref_group_priority">群组优先级</string>
    <string name="pref_ignore_group_sound">忽略群组提示音</string>
    <string name="pref_ignore_group_float">忽略群组浮动通知</string>
    <string name="pref_use_multi_line">多行显示单条消息</string>
    <string name="pref_max_single_msg">单条消息最大字数</string>
    <string name="pref_use_group">消息分组</string>
    <string name="pref_use_notif_group">合并消息分组(N+)</string>
    <string name="pref_hide_share">隐藏“分享到QQ”</string>
    <string name="pref_hide_launcher">隐藏启动器图标</string>
    <string name="pref_cate_about">关于</string>
    <string name="pref_version_code">版本号</string>

    <string name="pref_enable_permit">已启用</string>
    <string name="pref_disable_permit">已禁用</string>

    <!--APP-->
    <string name="qq">QQ</string>
    <string name="tim">TIM</string>
    <string name="qqlite">QQ轻聊版</string>

    <!--关于页-->
    <string name="about_dialog_title">关于</string>
    <string name="about_dialog_message">
        1.替换QQ消息通知（支持QQ正式版轻聊版和TIM）\n
        显示每条消息的内容\n
        声音震动与QQ消息相同，要修改请直接设置QQ\n\n
        2.转发分享消息\n
        转发消息解决部分应用分享图片到QQ出现“图片不存在”错误\n
        用QQ Api来转发文字中包含链接的分享\n
        网易云链接分享可直接播放\n\n
        如果QQ通知没变化，请尝试重启手机\n
        如果QQ通知有效后突然无效，请尝试重新开关通知使用权\n\n
        隐藏图标后可在无障碍设置或应用信息页找到设置入口\n
        3.基于开源项目QQNotfAndShare二次开发，感谢原作者
    </string>
    <string name="about_dialog_support">打赏</string>
    <string name="about_dialog_github">GitHub</string>
    <string name="about_dialog_button">确定</string>
</resources>
